<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivityUsers">

    <View
        android:id="@+id/ClubOwnerEventsHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="GCC: Admin View"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/onPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ClubOwnerEventsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ClubOwnerEventsHeader" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corners"
        android:hint="@string/usernameHint"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_user"
        android:drawablePadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClubOwnerEventsHeader"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corners"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_lock"
        android:drawablePadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addUserBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/addUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:background="@drawable/round_bg"
        android:text="@string/adduser_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/searchBarFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <RadioGroup
        android:id="@+id/searchBarFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserBtn">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="129dp"
            android:layout_height="63dp"
            android:baselineAligned="false"
            app:buttonTint="@color/primary"
            android:checked="true"
            android:text="@string/roleUser" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:buttonTint="#2196F3"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:buttonTint="@color/primary"
            android:text="@string/roleOwner" />
    </RadioGroup>

    <ListView
        android:id="@+id/listUsersView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:divider="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBarFilter" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAdminUserList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User List:"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/nav_background"
        android:elevation="4dp"
        app:itemIconSize="32dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listUsersView"
        app:menu="@menu/nav" />
</androidx.constraintlayout.widget.ConstraintLayout>